fix repsitory and z-index

--- a/styles/cinemaByMovie.scss
+++ b/styles/cinemaByMovie.scss
@@ -15,7 +15,6 @@
 
 .cinema__cardItem {
   position: relative;
-	z-index: -1;
 	background-color: #fff;
 	border-radius: 1.2vw;
 	margin: 1rem auto 2vw;
